# expert_match

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_expert_profiles.py  002_matching_and_outreach.py  003_runtime_service_tables.py  004_pgvector_embeddings.py  005_expert_access_keys.py  006_manual_expertise_hnsw_index.py  007_embedding_model_cutover.py  008_expert_profile_short_bio.py  009_postgres_fts_trgm_indexes.py  010_drop_pg_trgm_cleanup.py
backend/app/: __init__.py  main.py
backend/app/api/: availability.py  dependencies.py  expert_profiles.py  health.py  matching.py  outreach.py  router.py
backend/app/core/: config.py  logging.py  store.py
backend/app/db/: session.py
backend/app/models/: __init__.py  backfill_run.py  enums.py  expert_availability_slot.py  expert_enrichment_run.py  expert_profile.py  expert_query.py  expert_search_document.py  expertise_entry.py  match_result.py  outreach_recipient.py  outreach_recipient_slot.py  outreach_request.py  publication_record.py  requester_contact.py
backend/app/schemas/: common.py  expert_profile.py  matching.py  outreach.py
backend/app/scripts/: ingest_methods_neuroscientists.py  run_backfills.py
backend/app/seed_data/: __init__.py  methods_neuroscientists.py
backend/app/services/: availability_service.py  email_service.py  embedding_service.py  matching_service.py  (+5 more)
backend/tests/: conftest.py  helpers.py
(+94 files in other folders)
